@@ -125,6 +125,9 @@ Pointing me toward yet another compatibility bug.
 Ingo van Lil
 Another bug spotter.
 
+Ville Vuorinen <vv@ydin.org>
+Spotted the player spawn sound bug.
+
 Everyone who contributed indirectly to MBF and Boom and Doom; see the
 respective documentation files.
 
